--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,7 +9,8 @@ android {
     defaultConfig {
         applicationId "pl.pg.adamil.natsuhaze"
         minSdkVersion 23
-        targetSdkVersion 30
+        //noinspection ExpiredTargetSdkVersion
+        targetSdkVersion 23
         versionCode 1
         versionName "1.0"
 
